Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,17 @@
 body {
   @apply cursor-default;
 }
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
 
 .markdown-body {
   background-color: transparent;
